[metadata]
name = Day9_PyGameExp
description = pygame experience
author = Bradley Bailey
license =
licence_file =
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    game
install_requires =
    pygame==2.1.2
python_requires = >= 3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.25.1
    pytest>=7.1.2
    pytest-cov>=3.0.0
    mypy>=0.961

[options.package_data]
game = py.typed

[flake8]
max-line-length = 160